CSS styles connected

--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
+<!-- Commit in master branch -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Take Your Coffe</title>
+    <title>Take Your Coffee</title>
+
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    
+    <header>
+        <!-- Temp https://www.cafevertical.com/ -->
+
+        <h1>Take Your Coffee</h1>
+        <div class="hero">
+
+        </div>
+    </header>
+
+
+
+    <footer>
+        <h5>For all good</h5>
+    </footer>
 </body>
 </html>
