Header hero complete

--- a/index.html
+++ b/index.html
@@ -12,18 +12,27 @@
 </head>
 <body>
     <header>
-        <!-- Temp https://www.cafevertical.com/ -->
+            <div class="inner-container">
+                <h1>Take Your Coffee</h1>
+                <h2>All you whant to know about your drink</h2>
 
-        <h1>Take Your Coffee</h1>
-        <div class="hero">
-
-        </div>
+                <a href="#content" class="header-btn">Click me</a>
+            </div>
     </header>
 
+    <div class="content" id="content">
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione, earum! Quas cupiditate enim deleniti temporibus ipsa consequatur soluta porro fugiat itaque, id, excepturi laudantium in ea dolor. Minus, eligendi corrupti.
+        </p>
 
+
+    </div>
 
     <footer>
         <h5>For all good</h5>
     </footer>
 </body>
 </html>
+
+
+<!-- Temp https://www.cafevertical.com/ -->
