Content base construct complete

--- a/index.html
+++ b/index.html
@@ -21,11 +21,36 @@
     </header>
 
     <div class="content" id="content">
-        <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione, earum! Quas cupiditate enim deleniti temporibus ipsa consequatur soluta porro fugiat itaque, id, excepturi laudantium in ea dolor. Minus, eligendi corrupti.
-        </p>
-
-
+        <div class="content-header">
+            <h2>Choose which one you like</h2>
+            <h3>Everyone is special in their own way</h3>
+        </div>
+        <div class="content-list">
+            <div class="list-element">
+                <a href="espresso.html"><img src="img/Coffee-List/espresso.jpg" alt="Espresso"></a>
+                <h3>Espresso</h3>
+            </div>
+            <div class="list-element">
+                <a href="cappuccino.html"><img src="img/Coffee-List/cappuccino.jpg" alt="Cappuccino"></a>
+                <h3>Cappuccino</h3>
+            </div>
+            <div class="list-element">
+                <a href="Latte.html"><img src="img/Coffee-List/latte.jpg" alt="Latte"></a>
+                <h3>Latte</h3>
+            </div>
+            <div class="list-element">
+                <a href="Frappe.html"><img src="img/Coffee-List/frappe.jpg" alt="Frappe"></a>
+                <h3>Frappe</h3>
+            </div>
+            <div class="list-element">
+                <a href="Mocha.html"><img src="img/Coffee-List/mocha.jpg" alt="Mocha"></a>
+                <h3>Mocha</h3>
+            </div>
+            <div class="list-element">
+                <a href="Traditional-Drip.html"><img src="img/Coffee-List/traditional-drip.jpg" alt="Traditional Drip"></a>
+                <h3>Traditional Drip</h3>
+            </div>
+        </div>
     </div>
 
     <footer>
