Added new coffee pos

--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
                 <a href="Traditional-Drip.html"><img src="img/Coffee-List/traditional-drip.jpg" alt="Traditional Drip"></a>
                 <h3>Traditional Drip</h3>
             </div>
+            <div class="list-element">
+                <a href="Americano.html"><img src="img/Coffee-List/americano.jpg" alt="Americano"></a>
+                <h3>Americano</h3>
+            </div>
+            <div class="list-element">
+                <a href="Hot-Whit- Russian.html"><img src="img/Coffee-List/hot-white-russian.jpeg" alt="Hot White Russian"></a>
+                <h3>Hot White Russian</h3>
+            </div>
         </div>
     </div>
 
