Footer scripting complete

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Take Your Coffee</title>
 
     <link rel="stylesheet" href="css/main.css">
+    <script type="module" src="main.js"></script>
 </head>
 <body>
     <header>
@@ -61,9 +62,7 @@
         </div>
     </div>
 
-    <footer>
-        <h5>For all good</h5>
-    </footer>
+    <footer-tmp></footer-tmp>
 </body>
 </html>
 
