first modal window

--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
             <h2>Choose which one you like</h2>
             <h3>Everyone is special in their own way</h3>
         </div>
+
+        <!-- COFFEE LIST -->
         <div class="content-list">
-            <div class="list-element">
-                <a href="espresso.html"><img src="img/Coffee-List/espresso.jpg" alt="Espresso"></a>
+            <div class="list-element" id="element-espresso">
+                <img src="img/Coffee-List/espresso.jpg" alt="Espresso">
                 <h3>Espresso</h3>
             </div>
             <div class="list-element">
@@ -61,6 +63,25 @@
             </div>
         </div>
     </div>
+
+    <!-- COFFEE MODAL PAGE -->
+    <div class="modal-container" id="modal-espresso">
+        <div class="modal">
+            <div class="modal-header">Espresso</div>
+            <div class="modal-info">
+                <div class="modal-img"><img src="img/Coffee-List/espresso.jpg" alt="Espresso"></div>
+                <div class="modal-body">Espresso is a coffee-brewing method of Italian origin, in which a small 
+                    amount of nearly boiling water (about 90 °C or 190 °F) is forced under 9–10 bars 
+                    (900–1,000 kPa; 130–150 psi) of pressure through finely-ground coffee beans. Espresso can be 
+                    made with a wide variety of coffee beans and roast degrees. Espresso is the most common way 
+                    of making coffee in southern Europe, especially in Italy, France, Spain, and Portugal. It is 
+                    also popular in Switzerland, Croatia, Bosnia and Herzegovina, Bulgaria, Greece, and Australia.</div>
+            </div>
+            <div class="modal-footer" id="close-espresso">Close page</div>
+        </div>
+    </div>
+
+
 
     <footer-tmp></footer-tmp>
 </body>
