Second modal page

--- a/index.html
+++ b/index.html
@@ -33,32 +33,32 @@
                 <img src="img/Coffee-List/espresso.jpg" alt="Espresso">
                 <h3>Espresso</h3>
             </div>
-            <div class="list-element">
-                <a href="cappuccino.html"><img src="img/Coffee-List/cappuccino.jpg" alt="Cappuccino"></a>
+            <div class="list-element" id="element-cappuccino">
+                <img src="img/Coffee-List/cappuccino.jpg" alt="Cappuccino">
                 <h3>Cappuccino</h3>
             </div>
             <div class="list-element">
-                <a href="Latte.html"><img src="img/Coffee-List/latte.jpg" alt="Latte"></a>
+                <img src="img/Coffee-List/latte.jpg" alt="Latte">
                 <h3>Latte</h3>
             </div>
             <div class="list-element">
-                <a href="Frappe.html"><img src="img/Coffee-List/frappe.jpg" alt="Frappe"></a>
+                <img src="img/Coffee-List/frappe.jpg" alt="Frappe">
                 <h3>Frappe</h3>
             </div>
             <div class="list-element">
-                <a href="Mocha.html"><img src="img/Coffee-List/mocha.jpg" alt="Mocha"></a>
+                <img src="img/Coffee-List/mocha.jpg" alt="Mocha">
                 <h3>Mocha</h3>
             </div>
             <div class="list-element">
-                <a href="Traditional-Drip.html"><img src="img/Coffee-List/traditional-drip.jpg" alt="Traditional Drip"></a>
+                <img src="img/Coffee-List/traditional-drip.jpg" alt="Traditional Drip">
                 <h3>Traditional Drip</h3>
             </div>
             <div class="list-element">
-                <a href="Americano.html"><img src="img/Coffee-List/americano.jpg" alt="Americano"></a>
+                <img src="img/Coffee-List/americano.jpg" alt="Americano">
                 <h3>Americano</h3>
             </div>
             <div class="list-element">
-                <a href="Hot-Whit- Russian.html"><img src="img/Coffee-List/hot-white-russian.jpeg" alt="Hot White Russian"></a>
+                <img src="img/Coffee-List/hot-white-russian.jpeg" alt="Hot White Russian">
                 <h3>Hot White Russian</h3>
             </div>
         </div>
@@ -78,6 +78,21 @@
                     also popular in Switzerland, Croatia, Bosnia and Herzegovina, Bulgaria, Greece, and Australia.</div>
             </div>
             <div class="modal-footer" id="close-espresso">Close page</div>
+        </div>
+    </div>
+
+    <div class="modal-container" id="modal-cappuccino">
+        <div class="modal">
+            <div class="modal-header">Espresso</div>
+            <div class="modal-info">
+                <div class="modal-img"><img src="img/Coffee-List/cappuccino.jpg" alt="Cappuccino"></div>
+                <div class="modal-body">A cappuccino is an espresso-based coffee drink that originated in 
+                    Italy and is prepared with steamed milk foam (microfoam).
+                    Variations of the drink involve the use of cream instead of milk, using non-dairy milk 
+                    substitutes and flavoring with cinnamon or chocolate powder. It is typically smaller in 
+                    volume than a caffè latte, with a thicker layer of microfoam.</div>
+            </div>
+            <div class="modal-footer" id="close-cappuccino">Close page</div>
         </div>
     </div>
 
