Second/Third Modal HotFix

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <img src="img/Coffee-List/cappuccino.jpg" alt="Cappuccino">
                 <h3>Cappuccino</h3>
             </div>
-            <div class="list-element">
+            <div class="list-element" id="element-latte">
                 <img src="img/Coffee-List/latte.jpg" alt="Latte">
                 <h3>Latte</h3>
             </div>
@@ -78,6 +78,51 @@
                     also popular in Switzerland, Croatia, Bosnia and Herzegovina, Bulgaria, Greece, and Australia.</div>
             </div>
             <div class="modal-footer" id="close-espresso">Close page</div>
+        </div>
+    </div>
+
+    <div class="modal-container" id="modal-cappuccino">
+        <div class="modal">
+            <div class="modal-header">Cappuccino</div>
+            <div class="modal-info">
+                <div class="modal-img"><img src="img/Coffee-List/cappuccino.jpg" alt="Cappuccino"></div>
+                <div class="modal-body">A cappuccino is an espresso-based coffee drink that originated in 
+                    Italy and is prepared with steamed milk foam (microfoam).
+                    Variations of the drink involve the use of cream instead of milk, using non-dairy milk 
+                    substitutes and flavoring with cinnamon or chocolate powder. It is typically smaller in 
+                    volume than a caffè latte, with a thicker layer of microfoam.</div>
+            </div>
+            <div class="modal-footer" id="close-cappuccino">Close page</div>
+        </div>
+    </div>
+
+    <div class="modal-container" id="modal-latte">
+        <div class="modal">
+            <div class="modal-header">Latte</div>
+            <div class="modal-info">
+                <div class="modal-img"><img src="img/Coffee-List/latte.jpg" alt="Latte"></div>
+                <div class="modal-body">Caffè latte often shortened to just latte in English, is a coffee 
+                    beverage of Italian origin made with espresso and steamed milk. Variants include the 
+                    chocolate-flavored mocha or replacing the coffee with another beverage base such as 
+                    masala chai (spiced Indian tea), mate, matcha, turmeric, or rooibos; alternatives to 
+                    milk, such as soy milk or almond milk, are also used.</div>
+            </div>
+            <div class="modal-footer" id="close-latte">Close page</div>
+        </div>
+    </div>
+
+    <div class="modal-container" id="modal-cappuccino">
+        <div class="modal">
+            <div class="modal-header">Espresso</div>
+            <div class="modal-info">
+                <div class="modal-img"><img src="img/Coffee-List/cappuccino.jpg" alt="Cappuccino"></div>
+                <div class="modal-body">A cappuccino is an espresso-based coffee drink that originated in 
+                    Italy and is prepared with steamed milk foam (microfoam).
+                    Variations of the drink involve the use of cream instead of milk, using non-dairy milk 
+                    substitutes and flavoring with cinnamon or chocolate powder. It is typically smaller in 
+                    volume than a caffè latte, with a thicker layer of microfoam.</div>
+            </div>
+            <div class="modal-footer" id="close-cappuccino">Close page</div>
         </div>
     </div>
 
