--- a/index.html
+++ b/index.html
@@ -41,23 +41,23 @@
                 <img src="img/Coffee-List/latte.jpg" alt="Latte">
                 <h3>Latte</h3>
             </div>
-            <div class="list-element">
+            <div class="list-element" id="element-frappe">
                 <img src="img/Coffee-List/frappe.jpg" alt="Frappe">
                 <h3>Frappe</h3>
             </div>
-            <div class="list-element">
+            <div class="list-element" id="element-mocha">
                 <img src="img/Coffee-List/mocha.jpg" alt="Mocha">
                 <h3>Mocha</h3>
             </div>
-            <div class="list-element">
+            <div class="list-element" id="element-traditional-drip">
                 <img src="img/Coffee-List/traditional-drip.jpg" alt="Traditional Drip">
                 <h3>Traditional Drip</h3>
             </div>
-            <div class="list-element">
+            <div class="list-element" id="element-americano">
                 <img src="img/Coffee-List/americano.jpg" alt="Americano">
                 <h3>Americano</h3>
             </div>
-            <div class="list-element">
+            <div class="list-element" id="element-hwt">
                 <img src="img/Coffee-List/hot-white-russian.jpeg" alt="Hot White Russian">
                 <h3>Hot White Russian</h3>
             </div>
@@ -111,33 +111,78 @@
         </div>
     </div>
 
-    <div class="modal-container" id="modal-cappuccino">
+    <div class="modal-container" id="modal-frappe">
         <div class="modal">
-            <div class="modal-header">Espresso</div>
+            <div class="modal-header">Frappe</div>
             <div class="modal-info">
-                <div class="modal-img"><img src="img/Coffee-List/cappuccino.jpg" alt="Cappuccino"></div>
-                <div class="modal-body">A cappuccino is an espresso-based coffee drink that originated in 
-                    Italy and is prepared with steamed milk foam (microfoam).
-                    Variations of the drink involve the use of cream instead of milk, using non-dairy milk 
-                    substitutes and flavoring with cinnamon or chocolate powder. It is typically smaller in 
-                    volume than a caffè latte, with a thicker layer of microfoam.</div>
+                <div class="modal-img"><img src="img/Coffee-List/frappe.jpg" alt="Frappe"></div>
+                <div class="modal-body">A frappé (pronounced frap-pay) is an iced beverage that 
+                    has been shaken, blended or beaten to produce a tasty, foamy, and refreshing 
+                    drink. It is served cold, often with whipped cream and toppings. You can add 
+                    ice before or after beating the coffee and custom additives such as sugar, milk, 
+                    vanilla, and sweet sauces. It depends on what you are shaking or blending it in: 
+                    a shaker, frappé maker or blender. An ice-crushing blender is better than a shaker 
+                    for blending a frappé. </div>
             </div>
-            <div class="modal-footer" id="close-cappuccino">Close page</div>
+            <div class="modal-footer" id="close-frappe">Close page</div>
         </div>
     </div>
 
-    <div class="modal-container" id="modal-cappuccino">
+    <div class="modal-container" id="modal-mocha">
         <div class="modal">
-            <div class="modal-header">Espresso</div>
+            <div class="modal-header">Mocha</div>
             <div class="modal-info">
-                <div class="modal-img"><img src="img/Coffee-List/cappuccino.jpg" alt="Cappuccino"></div>
-                <div class="modal-body">A cappuccino is an espresso-based coffee drink that originated in 
-                    Italy and is prepared with steamed milk foam (microfoam).
-                    Variations of the drink involve the use of cream instead of milk, using non-dairy milk 
-                    substitutes and flavoring with cinnamon or chocolate powder. It is typically smaller in 
-                    volume than a caffè latte, with a thicker layer of microfoam.</div>
+                <div class="modal-img"><img src="img/Coffee-List/mocha.jpg" alt="Mocha"></div>
+                <div class="modal-body">Mocha is an intensely flavorful coffee blend that originated 
+                    in Ethiopia and was brought over to Europe by traders from Yemen in the late 1700s. 
+                    It is made up of espresso and hot chocolate milk. Together, these create a rich flavor 
+                    with notes of chocolate, caramel, earthy spices like cinnamon or nutmeg, and fruity 
+                    flavors such as raspberry or orange blossom, which can come from their addition.</div>
             </div>
-            <div class="modal-footer" id="close-cappuccino">Close page</div>
+            <div class="modal-footer" id="close-mocha">Close page</div>
+        </div>
+    </div>
+
+    <div class="modal-container" id="modal-traditional-drip">
+        <div class="modal">
+            <div class="modal-header">Traditional Drip</div>
+            <div class="modal-info">
+                <div class="modal-img"><img src="img/Coffee-List/traditional-drip.jpg" alt="Traditional Drip"></div>
+                <div class="modal-body">Traditional, drip coffee service is the most popular form of office coffee service 
+                    in America. Brewing a large pot of coffee is by far the most cost efficient option when supplying 
+                    refreshments to an office breakroom, but is also considered to be the freshest choice by coffee lovers.</div>
+            </div>
+            <div class="modal-footer" id="close-traditional-drip">Close page</div>
+        </div>
+    </div>
+
+    <div class="modal-container" id="modal-americano">
+        <div class="modal">
+            <div class="modal-header">Americano</div>
+            <div class="modal-info">
+                <div class="modal-img"><img src="img/Coffee-List/americano.jpg" alt="Americano"></div>
+                <div class="modal-body">An Americano is an espresso-based drink designed to resemble coffee brewed 
+                    in a drip filter, considered popular in the United States of America. This drink consists of a 
+                    single or double-shot of espresso combined with up to four or five ounces of hot water in a 
+                    two-demitasse cup. It is important to note, that an Americano is created by adding the water 
+                    to an already extracted espresso, not by extracting extra water through a single espresso puck. </div>
+            </div>
+            <div class="modal-footer" id="close-americano">Close page</div>
+        </div>
+    </div>
+
+    <div class="modal-container" id="modal-hwt">
+        <div class="modal">
+            <div class="modal-header">Hot White Russian</div>
+            <div class="modal-info">
+                <div class="modal-img"><img src="img/Coffee-List/hot-white-russian.jpeg" alt="Hot White Russian"></div>
+                <div class="modal-body">Creamy with a hint of rich coffee liqueur and a vodka base, a White Russian is a 
+                    decadent yet simple cocktail traditionally served on the rocks. But to us, any drink involving cream 
+                    and coffee is just asking to be served warm. Whatever your taste, the White Russian is incredibly 
+                    easy to make, so you can easily experiment with a  few different versions. Try the traditional White 
+                    Russian over ice or cozy up with a warm mug of our hot-tail version.</div>
+            </div>
+            <div class="modal-footer" id="close-hwt">Close page</div>
         </div>
     </div>
 
